--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@ body {
 
 header {
   background-color: #000;
-  box-shadow: 0, 5px, #696969;
-  width: 100%;
-  height: 75px;
+  box-shadow: 0 3px 3px #c0c0c0;
+  width: 100vw;
+  height: 10vh;
 }
